added function identifying new stocks to buy by reading the current portfolio

--- a/sandbox2.ipynb
+++ b/sandbox2.ipynb
@@ -575,6 +575,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "\n",
+    "import pandas as pd \n",
+    "\n",
+    "filtered_df = pd.read_csv('filtered_stock_df.csv')\n",
+    "top_filtered_stocks = filtered_df[\"symbol\"].head(5)\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "top_filtered_stocks"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    pool\n",
+       "1      ph\n",
+       "2    aptv\n",
+       "3     bio\n",
+       "4     gww\n",
+       "Name: symbol, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
